// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderCommentBody — snapshot golden files blocked 1`] = `
"**tripwire: blocked** — 2 of 6 rules failed; merge is held.

<a href="https://tripwire.sh/runs/0198abcd"><img src="https://tripwire.sh/badges/view-run.png" width="185" alt="View on Tripwire" /></a>
<!-- tripwire:run -->
"
`;

exports[`renderCommentBody — snapshot golden files passed 1`] = `
"**tripwire: passed** — all 6 rules passed.

<a href="https://tripwire.sh/runs/0198abcd"><img src="https://tripwire.sh/badges/view-run.png" width="185" alt="View on Tripwire" /></a>
<!-- tripwire:run -->
"
`;

exports[`renderCommentBody — snapshot golden files sent to review 1`] = `
"**tripwire: sent to review** — awaiting moderation — a maintainer decides next.

<a href="https://tripwire.sh/runs/0198abcd"><img src="https://tripwire.sh/badges/view-run.png" width="185" alt="View on Tripwire" /></a>
<!-- tripwire:run -->
"
`;
